<resources>
    <string name="app_name">Aula2003</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="calcular">Calcular</string>
    <string name="chamarSegundaTela">Chamar Segunda Tela</string>
    <string name="kilo">kilo</string>
    <string name="altura">altura</string>
    <string name="calcularIMC">Calcular IMC</string>
</resources>
